--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,11 @@
 title: Tomáš Hanečák
 description: Rozcestník na moje projekty 🔧🪛👨‍💻
 
+collections:
+  pages:
+    output: true
+    permalink: /:name/
+
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
